--- a/achievements&awards.html
+++ b/achievements&awards.html
@@ -210,6 +210,102 @@ color: cadetblue;
             <br />
             • Successfully completed my PG education from IIM Bangalore in 2024.
             <br />
+            •Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for The engineering Toolboxmore than a method in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for The importance of Ethics in
+Engineering in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Introducing the Global
+Responsibility Competency Compass for Engineers in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Capstone Projects
+and Implementation of UN SDGs in 2024.<br />
+•Successfully attended PowerGen India Utility Week Expo on invitation from Govt. of India in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union in
+2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of global Standard Symposium in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of ITU Kaleidoscope in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of ITU WTSA expo in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union in
+2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+for AI for Good impact India in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of robotics for Good Youth challenge India in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of Hackathon for startups in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of WHO-ITU Safe Listening Workshop in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of Workshop of Disaster Risk Reduction in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of Telecom Regulator Conference in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of India Mobile Congress in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of innovation Xchange in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union with
+event of celebration of UN Day in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union with
+event of Worlds Standards Day in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of Symposium on Broadcasting in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of Ministerial Facilitation in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of Digital Wave Stage in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union event
+of International AI Standards Summit in 2024.<br />
+•Successfully attended and lead the delegation of Republic of India in International Telecommunication Union World
+Telecommunication Standardization Assembly (WTSA-24) in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Global Recognition
+and Value of the International Accords in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Engineering Trends
+and Engineering Solutions for Sustainability in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES for Safety and ethics in practice part 1
+in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES for Safety and ethics in practice part 2
+in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Emphasis on sustainable
+development in Engineering education in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Assessing the
+Integration of the UN SDGs into Engineering Accreditation in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA for Quality Assurance in Engineering
+Education – TLA-SDG Mapping in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA for The International Engineering Alliance –
+What It Means To Become a Signatory in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA for Integrating Sustainability into Engineering
+Curricula – Strategies and Outcomes in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA for Adopting SDG and Industry Oriented
+Curriculum in Higher Education Engineering Program in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Ethics in
+Engineering: Corruption on Infrastructure Projects in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Making Engineering
+Appealing to the next generation in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for The “Engineers have
+Feelings Project”: Mental Wellness Support in Engineering Education in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Adapting
+Engineering Education for Sustainable Development in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Developing and
+Implementing Quality Assurance for the Engineering Profession in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Disaster Risk
+Management: Institutional Frameworks and Public Policies for Resilient Societies in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Disaster Risk
+Management: Engineering Driver for Risk Informed Development in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for IEA Accord Reviewer
+Training – Session 1 in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for IEA Accord Reviewer
+Training – Session 2 in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Innovation Approaches to
+Engineering Education: The World Engineering Day Student Hackathon in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Educating the Sustainability
+Engineers of the Future in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Journey of the Philippine
+Technological Council to Full Signatory Status of the Washington Accord in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA for Disaster Risk Management: Infrastructure
+Systems for Resilient Societies in 2024.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Re-setting the Benchmarks
+for Engineering Graduates with the Right Skills for Sustainable Development in 2024.<br />
         </ul></div>
     </div>
         </br></br>
