--- a/achievements&awards.html
+++ b/achievements&awards.html
@@ -203,10 +203,10 @@ color: cadetblue;
             <br />
             • Successfully got promoted to the membership of the prestigious The Institution of Engineers (India), kolkata as MIE in 2023.
             <br />
-            <h2 style="text-align:center; color:white;font-size:42px;">2023-PRESENT</h2>
+            <h2 style="text-align:center; color:white;font-size:42px;">2023-2024</h2>
             • Successfully received the Class-I Electrical Professional Certification cum License for performing independent Engineering & Technical activities from
-            <br />
-            &nbsp;&nbsp;Government of National Capital Territory of Delhi, India in 2024.
+            
+            Government of National Capital Territory of Delhi, India in 2024.
             <br />
             • Successfully completed my PG education from IIM Bangalore in 2024.
             <br />
@@ -306,6 +306,19 @@ Technological Council to Full Signatory Status of the Washington Accord in 2024.
 Systems for Resilient Societies in 2024.<br />
 •Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Re-setting the Benchmarks
 for Engineering Graduates with the Right Skills for Sustainable Development in 2024.<br />
+            <h2 style="text-align:center; color:white;font-size:42px;">2025</h2>
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Disaster Risk Management:
+Land Use Planning for Resilient Societies in 2025.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA for Engineering Leadership: Engineer Leader
+and Leader Engineer in 2025<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for Ethical Behaviour and Anti
+Corruption Education in Construction/ Civil Engineering in 2025.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC,CAFST for Engineering for
+Humanity: Case Studies of Afghanistan and Ukraine in 2025.<br />
+•Successfully accomplished and received accreditation of WFEO,UN,IEA,IFEES,GEDC for IEA Mentoring Workshop in
+2025.<br />
+•Successfully received the most prestigious GOLD AWARD accreditation of WFEO,UN,IEA for efforts and practices in
+engineering profession in 2025.<br />
         </ul></div>
     </div>
         </br></br>
