--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ color: darkcyan;}
                          color:white; 
                          margin:auto;padding-left:27px;
                          display:block;
-                         font-size:66px;
-                         text-align:left;
+                         font-size:88px;
+                         text-align:center;
                   }
 </style>
   
@@ -120,17 +120,17 @@ color: darkcyan;}
                      <A href="portfolio.html" target="_blank">PORTFOLIO</A>&nbsp;
                      <A href="achievements&awards.html" target="_blank">ACHIEVEMENTS&AWARDS</A>&nbsp;
                      <A href="services.html" target="_blank">SERVICES</A>&nbsp;
-                     <A href="contact.html" target="_blank">COMMUNICATION</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<dd></strong>
+                     <A href="contact.html" target="_blank">COMMUNICATION</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<dd></strong></P>
     
-
 <div class="hone"></br><strong>Welcome!.....Pranaam</strong></font><br>
     </div><dd></dd>
-<p><h3 font-size="8" style="color:white; padding-left:39px";>"It is said that whatever is around you and not created by god,<br/>&nbsp;&nbsp;Is created by an...
-<p style="color:white; font-size:66px";><strong>"Engineer."</h3></strong><br/></p>
+<p><h3 font-size="18" style="color:white; padding-left:39px;text-align:center;">"It is said that whatever is around you and not created by god,<br/>&nbsp;&nbsp;Is created by an...
+<p style="color:white; font-size:88px;text-align:center;"><strong>"Engineer."</h3></strong><br/></p>
 <div class="blocka"; align="center">Welcome to the world of real magicians, real professionals.</br>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the world of engineering and engineers.</br><br/>
                                            <strong>I am Er. Pankaj Yadav</strong> </br>
-                                           <strong>Prime Engineer(Distinguished)</strong> 
+                                           <strong>Prime Engineer(Distinguished)</strong></br>
+                                           <strong>Sovereign Engineering Authority & Specialist(Global)</strong> 
 
 </div>
 </font>
@@ -141,7 +141,8 @@ color: darkcyan;}
     With the most possible versatile profession ever imagined, engineers are the ones <br />
     who are the reasons behind everything.Here you will experience what is real engineering<br /> 
     profession,who are the real engineers and what they actually do.
-<br><br><br><br><br><br><br>
+<br>
+<img src="bdg.png" width="400" height="400" style="align-content:center;padding:20px;display:inline-flex;"><img src="iaa.jpg" width="400" height="300" style="align-content:center;padding-bottom:50px;padding-right:30px;display:inline-flex;"><img src="gca.jpg" width="300" height="340" style="align-content:center;padding-bottom:50px;display:inline-flex;"></p><br><br><br><br><br><br>
     <br>
     <br>
     <br>
