--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@ margin-bottom: 10px;}
 </div>
            
          <div class="frms" align="center">
-        <form id="contactForm"  method="post">
+        <form id="contactForm" action="https://script.google.com/macros/s/AKfycbx-RoDtufBGLkXzpO4ZKI1UvxEjFJ-wl7ZGrjubj9u3tJNvaVA83bpPzdrJo1gVw_51/exec" method="post">
             <p><strong>
                 NAME :
                 <input type="text" name="NAME" size="50"
@@ -227,3 +227,4 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
