--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@ margin-bottom: 10px;}
       .then(response => response.json())
       .then(data => {
         alert('Form submitted successfully!');
-        form.reset(); // Reset the form
+        //form.reset(); // Reset the form
       })
       .catch(error => {
         alert('Error submitting form. Please try again later.');
@@ -227,6 +227,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
