--- a/contact.html
+++ b/contact.html
@@ -166,37 +166,35 @@ margin-bottom: 10px;}
             </p>
 
         </form>
-            <script>
-    // Get the form element
-    const form = document.getElementById('contactForm');
+           
+             <script>
+const form = document.querySelector("#contactForm");
 
-    form.addEventListener('submit', function(event) {
-      event.preventDefault(); // Prevent the default form submission
+form.addEventListener("submit", function (e) {
+  e.preventDefault();
 
-      // Collect the form data
-      const formData = new FormData(form);
-      const formDataObj = {};
-      formData.forEach((value, key) => formDataObj[key] = value);
+  const formData = new FormData(form);
 
-      // Send the form data to the Google Apps Script Web App
-        fetch('https://script.google.com/macros/s/AKfycbx-RoDtufBGLkXzpO4ZKI1UvxEjFJ-wl7ZGrjubj9u3tJNvaVA83bpPzdrJo1gVw_51/exec', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(formDataObj) // Send data as JSON
-      })
-      .then(response => response.json())
-      .then(data => {
-        alert('Form submitted successfully!');
-        //form.reset(); // Reset the form
-      })
-      .catch(error => {
-        alert('Error submitting form. Please try again later.');
-        console.error('Error:', error);
-      });
-    });
-            </script>
+  fetch("https://script.google.com/macros/s/AKfycbx-RoDtufBGLkXzpO4ZKI1UvxEjFJ-wl7ZGrjubj9u3tJNvaVA83bpPzdrJo1gVw_51/exec", {
+    method: "POST",
+    body: formData
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.status === "success") {
+      alert("Form submitted successfully!");
+      form.reset();
+    } else {
+      alert("Error: " + data.message);
+    }
+  })
+  .catch(err => {
+    console.error(err);
+    alert("Submission failed");
+  });
+});
+</script>
+
         </div>
 
     <img src="bdg.png" width="400" height="400" style="align-content:center;padding:10px;display:inline-flex;"><img src="iaa.jpg" width="450" height="300" style="align-content:center;padding-bottom:50px;padding-right:30px;display:inline-flex;"><img src="gca.jpg" width="340" height="340" style="align-content:center;padding-bottom:50px;display:inline-flex;">
@@ -227,6 +225,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
