--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@ margin-bottom: 10px;}
         <form action="https://script.google.com/macros/s/AKfycbx-RoDtufBGLkXzpO4ZKI1UvxEjFJ-wl7ZGrjubj9u3tJNvaVA83bpPzdrJo1gVw_51/exec" method="post">
             <p><strong>
                 NAME :
-                <input type="text" name="NAME" size="50" id="NAME"
+                <input type="text" name="name" size="50" id="NAME"
                        maxlength="150" required="required" /><br/><br/>
                EMAIL :
                <input type="email" name="EMAIL" size="50" id="EMAIL"
@@ -210,6 +210,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
