--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@ margin-bottom: 10px;}
 
   form.addEventListener('submit', e => {
     e.preventDefault()
-    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+    fetch(scriptURL, { method: 'POST', body: new FormData(form), mode: 'no-cors'})
       .then(response => console.log('Success!', response))
       .catch(error => console.error('Error!', error.message))
   })
@@ -210,6 +210,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
