--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@ margin-bottom: 10px;}
                 MESSAGE/COMMENTS/CONCERNS :<br /></strong>
                 <textarea name="concerns" id="concerns" placeholder="concerns" cols="80" rows="8" required="required" resize="none" /></textarea></p>
             <p>
-            <input type="submit" value="SUBMIT"  width="100%" height="40%"  background-color="green" />
+            <input type="submit" value="SUBMIT" id="submitBtn" width="100%" height="40%"  background-color="green" />
                 <input type="reset" value="RESET"/>
             </p>
 
@@ -232,6 +232,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
