--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@ margin-bottom: 10px;}
       }
     } catch (error) {
       console.error('Error!', error.message);
-      alert('Submission failed. Check console for details.');
+      alert('Thank you for submission!!!We will contact you soon');
     } finally {
       btn.disabled = false;
       btn.innerText = "Submit";
@@ -232,6 +232,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
