--- a/contact.html
+++ b/contact.html
@@ -148,16 +148,16 @@ margin-bottom: 10px;}
 </div>
            
          <div class="frms" align="center">
-        <form name="formsheet" action="https://script.google.com/macros/s/AKfycbx-RoDtufBGLkXzpO4ZKI1UvxEjFJ-wl7ZGrjubj9u3tJNvaVA83bpPzdrJo1gVw_51/exec" method="post">
+        <form name="formsheet" action="https://script.google.com/macros/s/AKfycbw6Qmu6GK1pcFns-mpvUVEHKdcr_8lCe89RqWI6GC-eUfzKBp6q9u9rjXij-p2xV4qR/exec" method="post">
             <p><strong>
                 NAME :
-                <input type="text" name="name" size="50" id="name" placeholder="name"
+                <input type="text" name="name" size="50" id="name" placeholder=" Please Enter Full Name"
                        maxlength="150" required="required" /><br/><br/>
                EMAIL :
-               <input type="email" name="email" size="50" id="email" placeholder="email"
+               <input type="email" name="email" size="50" id="email" placeholder="Please Enter Email"
                        maxlength="150" required="required"/><br /><br />
                 MOBILE :
-                <input type="text" name="mobile" id="mobile" placeholder="mobile" size="50" maxlength="30" required="required"/><br><br>
+                <input type="text" name="mobile" id="mobile" placeholder="PLease Enter mobile with Country Code" size="50" maxlength="30" required="required"/><br><br>
                 MESSAGE/COMMENTS/CONCERNS :<br /></strong>
                 <textarea name="concerns" id="concerns" placeholder="concerns" cols="80" rows="8" required="required" resize="none" /></textarea></p>
             <p>
@@ -167,7 +167,7 @@ margin-bottom: 10px;}
 
         </form>
            <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbx0oytVFly6Kb0oPQruKnr_kOeDiucmDUs4aGzh7Mb2q5VdJJu0YQsIh5-AGlMPUebH/exec';
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbw6Qmu6GK1pcFns-mpvUVEHKdcr_8lCe89RqWI6GC-eUfzKBp6q9u9rjXij-p2xV4qR/exec';
   const form = document.forms['formsheet'];
   const btn = document.getElementById('submitBtn');
 
@@ -232,6 +232,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
