--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@ margin-bottom: 10px;}
 </div>
            
          <div class="frms" align="center">
-        <form name="formsheet" action="https://script.google.com/macros/s/AKfycbw6Qmu6GK1pcFns-mpvUVEHKdcr_8lCe89RqWI6GC-eUfzKBp6q9u9rjXij-p2xV4qR/exec" method="post">
+        <form name="formsheet" action="https://script.google.com/macros/s/AKfycbyAoYdc5enlybTObf65JXO3l92R1jNF5UBbTe4u5su4lLG1wnmutH_6JoOrfw0SHJhG/exec" method="post">
             <p><strong>
                 NAME :
                 <input type="text" name="name" size="50" id="name" placeholder=" Please Enter Full Name"
@@ -157,9 +157,9 @@ margin-bottom: 10px;}
                <input type="email" name="email" size="50" id="email" placeholder="Please Enter Email"
                        maxlength="150" required="required"/><br /><br />
                 MOBILE :
-                <input type="text" name="mobile" id="mobile" placeholder="PLease Enter mobile with Country Code" size="50" maxlength="30" required="required"/><br><br>
+                <input type="text" name="mobile" id="mobile" placeholder="   Please Enter mobile with Country Code  " size="50" maxlength="30" required="required"/><br><br>
                 MESSAGE/COMMENTS/CONCERNS :<br /></strong>
-                <textarea name="concerns" id="concerns" placeholder="concerns" cols="80" rows="8" required="required" resize="none" /></textarea></p>
+                <textarea name="concerns" id="concerns" placeholder="Please Enter your Message/Query/Concerns with Country/Location" cols="80" rows="8" required="required" resize="none" /></textarea></p>
             <p>
             <input type="submit" value="SUBMIT" id="submitBtn" width="100%" height="40%"  background-color="green" />
                 <input type="reset" value="RESET"/>
@@ -167,7 +167,7 @@ margin-bottom: 10px;}
 
         </form>
            <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbw6Qmu6GK1pcFns-mpvUVEHKdcr_8lCe89RqWI6GC-eUfzKBp6q9u9rjXij-p2xV4qR/exec';
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbyAoYdc5enlybTObf65JXO3l92R1jNF5UBbTe4u5su4lLG1wnmutH_6JoOrfw0SHJhG/exec';
   const form = document.forms['formsheet'];
   const btn = document.getElementById('submitBtn');
 
@@ -232,6 +232,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
