--- a/contact.html
+++ b/contact.html
@@ -161,6 +161,7 @@ margin-bottom: 10px;}
                 MESSAGE/COMMENTS/CONCERNS :<br /></strong>
                 <textarea name="concerns" id="concerns" placeholder="        Please Enter your Message/Query/Concerns with Country/Location" cols="80" rows="8" required="required" resize="none" /></textarea></p>
             <p>
+                <input type="hidden" name="uniqueId" id="uniqueId">
             <input type="submit" value="SUBMIT" id="submitBtn" width="100%" height="40%"  background-color="green" />
                 <input type="reset" value="RESET"/>
             </p>
@@ -241,6 +242,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
