--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@ margin-bottom: 10px;}
                 MESSAGE/COMMENTS/CONCERNS :<br /></strong>
                 <textarea name="concerns" id="concerns" placeholder="        Please Enter your Message/Query/Concerns with Country/Location" cols="80" rows="8" required="required" resize="none" /></textarea></p>
             <p>
-                <input type="hidden" name="uniqueId" id="uniqueId">
+                <input type="hidden" name="uniqueid" id="uniqueid">
             <input type="submit" value="SUBMIT" id="submitBtn" width="100%" height="40%"  background-color="green" />
                 <input type="reset" value="RESET"/>
             </p>
@@ -179,7 +179,7 @@ margin-bottom: 10px;}
   const uniqueID = `ID-${timestamp}-${randomPart}`;
     
   // 2. Put the ID into the hidden input so it sends to Google Sheets
-  document.getElementById('uniqueId').value = uniqueID;
+  document.getElementById('uniqueid').value = uniqueID;
       
       btn.disabled = true;
     btn.innerText = "Sending...";
@@ -242,6 +242,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
