--- a/contact.html
+++ b/contact.html
@@ -193,9 +193,9 @@ margin-bottom: 10px;}
 
       const result = await response.json();
       if (result.result === 'success') {
-        alert(`Your Entries Have Been Successfully Received.
-        You Will Receive the Response Shortly on the Entered Email ID/Contact Details.
-        Thank You & Warm Regards!!!\n\nYour Unique ID is: ${uniqueID}\n\n`);
+        alert(`Your Entries Have Been Successfully Received.\n\n
+    You Will Receive the Response Shortly on the Entered Email ID/Contact Details.\n\n
+    Thank You & Warm Regards!!!\n\nYour Unique ID is: ${uniqueID}\n\n`);
         form.reset();
       } else {
         throw new Error(result.error);
@@ -242,6 +242,7 @@ margin-bottom: 10px;}
 </body>
 
 </html>
+
 
 
 
